--- a/Controller2/Controller2.csproj
+++ b/Controller2/Controller2.csproj
@@ -54,5 +54,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model2\Model2.csproj">
+      <Project>{411cc5ee-6d0e-4481-8437-a2bf68457dab}</Project>
+      <Name>Model2</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\View\View.csproj">
+      <Project>{ae6b9697-fcdf-4044-925f-36dacf3eadc5}</Project>
+      <Name>View</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
