--- a/View/View.csproj
+++ b/View/View.csproj
@@ -135,5 +135,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model2\Model2.csproj">
+      <Project>{411cc5ee-6d0e-4481-8437-a2bf68457dab}</Project>
+      <Name>Model2</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
