chang. simu et clock

--- a/Model2/Model2.csproj
+++ b/Model2/Model2.csproj
@@ -124,6 +124,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimulationClock.cs" />
     <Compile Include="DiningRoom\Staff\Butler.cs" />
     <Compile Include="DiningRoom\CourseType.cs" />
     <Compile Include="DiningRoom\Customer.cs" />
