--- a/View/View.csproj
+++ b/View/View.csproj
@@ -71,11 +71,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="IOrderPerformer.cs" />
+    <Compile Include="IParametersObserver.cs" />
     <Compile Include="IUserInput.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Toto.cs" />
     <Compile Include="ViewFacade.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
