--- a/Model2/Model2.csproj
+++ b/Model2/Model2.csproj
@@ -230,6 +230,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiningRoom\CountertopDiningRoom.cs" />
     <Compile Include="SimulationClock.cs" />
     <Compile Include="DiningRoom\Staff\Butler.cs" />
     <Compile Include="DiningRoom\CourseType.cs" />
